[I3] Remove custom i3 bar and migrate to I3Blocks
I started to have a lot of issues with my custom Java I3 bar:
- github PRs often exceeded quotas
- clicking on github PRs was not responsive: it could take up to 30
second to open a browser tab after clicking
- date started to freeze

the new version use I3 blocks:
- no more custom scripts
- volume can be increased/decreased with mouse scroll
- date is exact
- no more github PR listing :'(

--- a/i3.conf
+++ b/i3.conf
@@ -233,6 +233,6 @@ bindsym $mod+r mode "resize"
 # finds out, if available)
 bar {
   position top
-  status_command exec ~/.config/my3status/wrapper.sh
+  status_command i3blocks -c ~/.config/i3/i3blocks.conf
   tray_output primary
 }
